Added container component to center elements in app

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,1 +1,11 @@
-$brand-color: rebeccapurple;
+// COLORS
+$off-white: #a5afd7;
+$off-black: #20222b;
+$dark-blue: #333745;
+
+
+// SIZE
+
+$m-size: 1.6rem;
+$l-size: 3.2rem;
+$xl-size: 4.8rem;
