--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,12 +5,14 @@
   padding: 0;
   box-sizing: inherit;
 }
+
 html {
   font-size: 62.5%;
 }
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 1.6rem;
+  font-size: $m-size;
   box-sizing: border-box;
+  background-color: $dark-blue;
 }
