--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,17 +1,17 @@
 .header {
-  padding: 1.6rem 0;
-  background-color: #20222b;
+  padding: $m-size 0;
+  background-color: $off-black;
   color: white;
-  margin-bottom: 4.8rem;
+  margin-bottom: $xl-size;
 
   &__title {
-    font-size: 3.2rem;
+    font-size: $l-size;
     margin: 0;
   }
 
   &__subtitle {
-    color: #a5afd7;
-    font-size: 1.6rem;
+    color: $off-white;
+    font-size: $m-size;
     font-weight: 500;
     margin: 0;
   }
