--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,5 @@
-@import "base/base";
 @import "base/variables";
+@import "base/base";
 
+@import "components/container";
 @import "components/header";
-
-body {
-  background-color: $brand-color;
-}
