Styled remove, remove all and add options button

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -16,3 +16,11 @@ body {
   box-sizing: border-box;
   background-color: $dark-blue;
 }
+
+button {
+  cursor: pointer;
+
+  &:disabled {
+    cursor: default;
+  }
+}
