--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -2,10 +2,10 @@
 $off-white: #a5afd7;
 $off-black: #20222b;
 $dark-blue: #333745;
-
+$purple: #8357c5;
 
 // SIZE
-
+$s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
