Created widget style for app body and remove all button

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,6 +1,8 @@
 // COLORS
 $off-white: #a5afd7;
 $off-black: #20222b;
+$blue: #3c4251;
+$light-blue: #464b5e;
 $dark-blue: #333745;
 $purple: #8357c5;
 
