--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,7 +2,7 @@
   padding: $m-size 0;
   background-color: $off-black;
   color: white;
-  margin-bottom: $xl-size;
+  margin-bottom: $m-size;
 
   &__title {
     font-size: $l-size;
@@ -14,5 +14,11 @@
     font-size: $m-size;
     font-weight: 500;
     margin: 0;
+  }
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .header {
+    margin-bottom: $xl-size;
   }
 }
